<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFridge</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="password2">Retype password</string>
    <string name="email">E-mail</string>
    <string name="notifications">Send e-mail notifications</string>
    <string name="credentials">Cache login credentials locally</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="notRegistered">Not registered yet?</string>
    <string name="createAccount">Create account</string>
    <string name="scan">Scan item</string>
    <string name="emptyHint"></string>
    <string name="emptyDesc"></string>
    <string name="foodManufacturer">Manufacturer</string>
    <string name="foodDescription">Description</string>
    <string name="addUserFood">Add food to list</string>
    <string name="cancel">Cancel</string>
    <string name="notAvailable">N/A</string>
    <string name="viewItemList">View food list</string>
    <string name="syncData">Download food list</string>
    <string name="modifyUser">Modify user data</string>
    <string name="modifyUserShort">Modify</string>
    <string name="deleteUser">Delete user</string>
    <string name="createAccountTitle">Create account</string>
    <string name="MainMenuTitle">Main menu</string>
    <string name="modifyDataTitle">Modify user data</string>
    <string name="itemDetailsTitle">Food details</string>
    <string name="itemListTitle">Food list</string>
    <string name="userFoodDetailsTitle">User food details</string>
    <string name="validAfterDays">Expiry after opening (in days)</string>
    <string name="viewDetails">View details</string>
    <string name="createItem">Create another</string>
    <string name="modifyItem">Set opened date</string>
    <string name="deleteItem">Delete item</string>
    <string name="cloneItem">Clone item</string>
    <string name="deleteData">Delete food list</string>
	<string name="modifyUserFood">Set opening date</string>
	<string name="expiryDate">Expiry date</string>
	<string name="openedDate">Opened date</string>
	
	<style name="ButtonTextWhite">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">15dp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>

	<style name="ButtonTextBlack">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#000000</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">15dp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>
	
	
</resources>