<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true" 
    android:background="#EEEEEE" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/txtUsername"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/emptyHint" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/txtPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <CheckBox
	        android:id="@+id/chkBxCredentialsLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/credentials" />
	    </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >
	    
	    <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_gravity="bottom"
	        android:layout_marginLeft="3dp"
		    android:layout_marginRight="2dp"
		    android:layout_marginBottom="3dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_selector_grey_custom"
	        android:padding="3dp"
	        android:text="@string/login"
	        android:textColor="#202020"
	        android:textStyle="bold" />
	    
	    <Button
	        android:id="@+id/btnRegister"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_gravity="bottom"
	        android:layout_marginLeft="2dp"
		    android:layout_marginRight="3dp"
		    android:layout_marginBottom="3dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_selector_grey_custom"
	        android:text="@string/createAccount"
	        android:textColor="#202020"
	        android:textStyle="bold" />
	
	</LinearLayout>
	
</LinearLayout>