<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    tools:context=".MainMenuActivity" 
    android:background="#EEEEEE">

    <Button
        android:id="@+id/btnScan"
        android:background="@drawable/button_selector_grey_custom" android:textStyle="bold" android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/scan" />
    
    <Button
        android:id="@+id/btnViewItemList"
        android:background="@drawable/button_selector_grey_custom" android:textStyle="bold" android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/viewItemList" />
    
    <Button
        android:id="@+id/btnDeleteFoodData"
        android:background="@drawable/button_selector_grey_custom" android:textStyle="bold" android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/deleteData" />

    <Button
        android:id="@+id/btnSyncFoodData"
        android:background="@drawable/button_selector_grey_custom" android:textStyle="bold" android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/syncData" />

    <Button
        android:id="@+id/btnModifyUserData"
        android:background="@drawable/button_selector_grey_custom" android:textStyle="bold" android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/modifyUser" />
    
    <Button
        android:id="@+id/btnLogout"
        android:background="@drawable/button_selector_grey_custom" android:textStyle="bold" android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/logout" />

</LinearLayout>